--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Byte-compiled Python files
 __pycache__/
 *.py[cod]
@@ -9,10 +8,9 @@ venv/
 env/
 .venv/
 
-
 # Generated text files from tesseract0.py
 *.txt
-
+.dist/
 
 # Logs
 *.log
